fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
+    width: 100%;
     min-width: 10vh;
     height: 100vh;
     background-color: #131312;
